GNOME Bugzilla – Bug 771502
gnome-screenshot area does not work when paired with current GNOME 3.21.92
Last modified: 2016-10-17 13:57:14 UTC
The geometry of gnome-screenshot --area is currently "broken" for me in both X and wayland. Fullscreen and window are working fine, it's just when one select a small area the bug shows, depending on how "large" an area one selects, either rendering a blank image or the wrong cordinates.
Same issue with Gimp. So it is not specific to gnome-screenshot.
-> gnome-shell Most likely this is a problem with gnome-shell then.
Created attachment 335869 [details] [review] clutter/stage: Fix framebuffer capture origin offset Commit f36fa53b0e8b7e2389ea2b63516a2eb00fcc7aa5 had the offset math wrong and the reviewer didn't notice it.
Review of attachment 335869 [details] [review]: Eeeks, yes
Wondering if this might also influence/fix bug 771192?
(In reply to André Klapper from comment #5) > Wondering if this might also influence/fix bug 771192? I don't think so, that bug actually reproduces without taking screenshots and as I said there, it seems to be a chrome issue.
Pushing with RT approval for freeze break. Attachment 335869 [details] pushed as 5fbb479 - clutter/stage: Fix framebuffer capture origin offset
something must be incomplete / still wrong (or different wrong) I have a dual-screen setup (notebook, internal lcd plus connected monitor) It is not possible to select an area for screenshots on 'the left monitor' (not related to primary it seems) Taking a screenshot on 'the left monitor' gives an al transparent image. I intentionally write 'left monitor' as I changed the layout of the screens, moving the 2nd screen to be left of 1st (primary) screen - then the effect moves to that screen. Inverting the layout again, making primary left of secondary moves the effect back.
Created attachment 335993 [details] [review] clutter/stage: Fix framebuffer capture origin offset (again) Commit 5fbb4793017b1891f0de4720a9793e8cfc1c8483 was wrong too. What we really want to do here is getting view relative coordinates given the view's and the rectangle's global coordinates so we need to subtract the view's origin from the rectangle's. -- Thanks for reporting, I misunderstood the kind of coordinates needed in cogl_framebuffer_read_pixels_into_bitmap() .
Thanks Rui, I gave that patch a very quick spin - I can now select regions to screenshot on both my screens
Review of attachment 335993 [details] [review]: OK
*** Bug 772878 has been marked as a duplicate of this bug. ***
Review of attachment 335993 [details] [review]: I didn't notice this patch, and fixed it locally myself, and I got the exact same diff.
*** Bug 772999 has been marked as a duplicate of this bug. ***
*** Bug 773080 has been marked as a duplicate of this bug. ***
Attachment 335993 [details] pushed as fc8de3d - clutter/stage: Fix framebuffer capture origin offset (again)
Thanks, are you planning to make a new release with this fix included?
@Laurent: The fix was backported to the 3.22 branch in https://git.gnome.org/browse/mutter/commit/?h=gnome-3-22&id=5ec5e294226ef8ef47af1b56b4c0c349aea7d607 hence the 3.22.2 release will include the fix: https://wiki.gnome.org/ThreePointTwentythree