clutter/stage: Fix framebuffer capture origin offset (again)

Commit 5fbb4793017b1891f0de4720a9793e8cfc1c8483 was wrong too. What we
really want to do here is getting view relative coordinates given the
view's and the rectangle's global coordinates so we need to subtract
the view's origin from the rectangle's.

https://bugzilla.gnome.org/show_bug.cgi?id=771502